// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'FEDERATION' ('legacy') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can update the service url and show it in comparison query 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > can update the service url and show it in comparison query 2`] = `✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__`;

exports[`'FEDERATION' ('legacy') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'FEDERATION' ('legacy') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 3 errors

   - Unknown type: User.
   - Unknown type User.
   - Type Query must define one or more fields.

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('legacy') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'FEDERATION' ('modern') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can update the service url and show it in comparison query 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'FEDERATION' ('modern') > can update the service url and show it in comparison query 2`] = `✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__`;

exports[`'FEDERATION' ('modern') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'FEDERATION' ('modern') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('modern') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - [test] Unknown type User

View full report:
http://__PATH__
`;

exports[`'FEDERATION' ('modern') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'SINGLE' ('legacy') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'SINGLE' ('legacy') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('legacy') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'SINGLE' ('legacy') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('legacy') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('legacy') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'SINGLE' ('legacy') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'SINGLE' ('legacy') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Unknown type User.

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('legacy') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'SINGLE' ('modern') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'SINGLE' ('modern') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('modern') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'SINGLE' ('modern') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('modern') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('modern') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'SINGLE' ('modern') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'SINGLE' ('modern') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Unknown type User.

View full report:
http://__PATH__
`;

exports[`'SINGLE' ('modern') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'STITCHING' ('legacy') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can update the service url and show it in comparison query 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('legacy') > can update the service url and show it in comparison query 2`] = `✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__`;

exports[`'STITCHING' ('legacy') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'STITCHING' ('legacy') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'STITCHING' ('legacy') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 3 errors

   - Unknown type User.
   - Unknown type: User.
   - Error: Unknown type: User.

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('legacy') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'STITCHING' ('modern') > can publish a schema with breaking, warning and safe changes 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('modern') > can publish a schema with breaking, warning and safe changes 2`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('modern') > can publish and check a schema with target:registry:read access 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('modern') > can publish and check a schema with target:registry:read access 2`] = `
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('modern') > can publish and check a schema with target:registry:read access 3`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('modern') > can update the service url and show it in comparison query 1`] = `
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`'STITCHING' ('modern') > can update the service url and show it in comparison query 2`] = `✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__`;

exports[`'STITCHING' ('modern') > publishing invalid schema SDL provides meaningful feedback for the user. 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".

--------------------------------------------stdout:
✖ Failed to publish schema
`;

exports[`'STITCHING' ('modern') > schema:check should notify user when registry is empty 1`] = `
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`'STITCHING' ('modern') > schema:check should throw on corrupted schema 1`] = `
--------------------------------------------exitCode:
1

--------------------------------------------stderr:


--------------------------------------------stdout:
✖ Detected 3 errors

   - Unknown type User.
   - Unknown type: User.
   - Unknown type: User.

View full report:
http://__PATH__
`;

exports[`'STITCHING' ('modern') > schema:publish should see Invalid Token error when token is invalid 1`] = `
--------------------------------------------exitCode:
2

--------------------------------------------stderr:
 ›   Error: Invalid token provided
 ›   Reference: __ID__

--------------------------------------------stdout:
✖ Failed to publish schema
`;
